--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "homepage": "http://Creative-CMB.github.io/creativecmb/",
+{
+  "homepage": "http://Creative-CMB.github.io/creativecmb/",
   "name": "projectreact",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.7.3",
+    "aos": "^2.3.4",
     "bootstrap": "^4.5.3",
     "emailjs-com": "^2.6.3",
     "node-sass": "^4.14.1",
@@ -21,8 +23,11 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.8.1",
+    "react-slick": "^0.27.13",
+    "slick-carousel": "^1.8.1",
     "swiper": "^6.3.4",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "whatsapp-button": "^1.0.14"
   },
   "scripts": {
     "predeploy": "npm run build",
