--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -24,6 +26,7 @@
     "react-scripts": "3.4.1",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.13",
+    "react-snowstorm": "0.0.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^6.3.4",
     "typescript": "^4.0.2",
